Button Menu and fragmenta

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="Desc_logo">Icono cosmo notes</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="profilePictureText">Profile google text</string>
+    <string name="back"><![CDATA[<-]]></string>
+    <string name="forward"><![CDATA[->]]></string>
 </resources>
